// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render impact tab 1`] = `
<ImpactTab
  collapsibleHeaderContext={
    Object {
      "$$typeof": Symbol(react.context),
      "Consumer": Object {
        "$$typeof": Symbol(react.context),
        "_calculateChangedBits": null,
        "_context": [Circular],
      },
      "Provider": Object {
        "$$typeof": Symbol(react.provider),
        "_context": [Circular],
      },
      "_calculateChangedBits": null,
      "_currentRenderer": null,
      "_currentRenderer2": null,
      "_currentValue": Object {
        "collapsibleScrollViewProps": undefined,
        "setCollapsibleScrollViewProps": [Function],
      },
      "_currentValue2": Object {
        "collapsibleScrollViewProps": undefined,
        "setCollapsibleScrollViewProps": [Function],
      },
      "_threadCount": 0,
    }
  }
/>
`;

exports[`should render journey tab 1`] = `
<PersonJourney
  collapsibleHeaderContext={
    Object {
      "$$typeof": Symbol(react.context),
      "Consumer": Object {
        "$$typeof": Symbol(react.context),
        "_calculateChangedBits": null,
        "_context": [Circular],
      },
      "Provider": Object {
        "$$typeof": Symbol(react.provider),
        "_context": [Circular],
      },
      "_calculateChangedBits": null,
      "_currentRenderer": null,
      "_currentRenderer2": null,
      "_currentValue": Object {
        "collapsibleScrollViewProps": undefined,
        "setCollapsibleScrollViewProps": [Function],
      },
      "_currentValue2": Object {
        "collapsibleScrollViewProps": undefined,
        "setCollapsibleScrollViewProps": [Function],
      },
      "_threadCount": 0,
    }
  }
/>
`;

exports[`should render notes tab 1`] = `
<PersonNotes
  collapsibleHeaderContext={
    Object {
      "$$typeof": Symbol(react.context),
      "Consumer": Object {
        "$$typeof": Symbol(react.context),
        "_calculateChangedBits": null,
        "_context": [Circular],
      },
      "Provider": Object {
        "$$typeof": Symbol(react.provider),
        "_context": [Circular],
      },
      "_calculateChangedBits": null,
      "_currentRenderer": null,
      "_currentRenderer2": null,
      "_currentValue": Object {
        "collapsibleScrollViewProps": undefined,
        "setCollapsibleScrollViewProps": [Function],
      },
      "_currentValue2": Object {
        "collapsibleScrollViewProps": undefined,
        "setCollapsibleScrollViewProps": [Function],
      },
      "_threadCount": 0,
    }
  }
/>
`;

exports[`should render steps tab 1`] = `
<PersonSteps
  collapsibleHeaderContext={
    Object {
      "$$typeof": Symbol(react.context),
      "Consumer": Object {
        "$$typeof": Symbol(react.context),
        "_calculateChangedBits": null,
        "_context": [Circular],
      },
      "Provider": Object {
        "$$typeof": Symbol(react.provider),
        "_context": [Circular],
      },
      "_calculateChangedBits": null,
      "_currentRenderer": null,
      "_currentRenderer2": null,
      "_currentValue": Object {
        "collapsibleScrollViewProps": undefined,
        "setCollapsibleScrollViewProps": [Function],
      },
      "_currentValue2": Object {
        "collapsibleScrollViewProps": undefined,
        "setCollapsibleScrollViewProps": [Function],
      },
      "_threadCount": 0,
    }
  }
/>
`;
